--- a/squid3.conf
+++ b/squid3.conf
@@ -20,9 +20,10 @@ http_access deny manager
 http_access allow localhost
 http_access deny all
 http_port 8080
-http_port 8000coredump_dir /var/spool/squid3
+http_port 8000
+coredump_dir /var/spool/squid
 refresh_pattern ^ftp: 1440 20% 10080
 refresh_pattern ^gopher: 1440 0% 1440
 refresh_pattern -i (/cgi-bin/|\?) 0 0% 0
 refresh_pattern . 0 20% 4320
-visible_hostname sivoi.proxy
+visible_hostname celebes.proxy
